# rknn

new_pjt/: CMakeLists.txt  main.cpp
